--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Iphone 14 Dynamic Islands</title>
+    <title>Iphone 14 Dynamic Islands | Diego Alan | Grettings to ASMR Prog</title>
 </head>
 <body>
+
     <input type="radio" name="theme" id="deep-purple" checked="checked">
     <input type="radio" name="theme" id="gold">
     <input type="radio" name="theme" id="space-black">
@@ -60,35 +61,30 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="notch-continer">
-            <div class="notch">
-                <div class="content">
-                    <div class="left">
-                        <div class="title"></div>
-                        <div class="text"></div>
-                    </div>
-                    <div class="right">
-                        <div class="bar">
-                            <div class="duration"></div>
+            <div class="notch-container" tabindex="0">
+                <div class="notch">
+                    <div class="content">
+                        <div class="left">
+                            <div class="title"></div>
+                            <div class="text"></div>
                         </div>
+                        <div class="right"></div>
+                            <div class="bar">
+                                <div class="duration"></div>
+                            </div>
                     </div>
                 </div>
             </div>
-
             <div class="notch-blur"></div>
-
-        </div>
-
-        <div class="pallette">
-            <label for="deep-purple" class="swatch"></label>
-            <label for="gold" class="swatch"></label>
-            <label for="space-black" class="swatch"></label>
-            <label for="silver" class="swatch"></label>
-        </div>
-
+        </div> 
     </div>
 
+    <div class="pallette">
+        <label for="deep-purple" class="swatch"></label>
+        <label for="gold" class="swatch"></label>
+        <label for="space-black" class="swatch"></label>
+        <label for="silver" class="swatch"></label>
+    </div>
+    
 </body>
 </html>
